--- a/Bakyuusubcss2.css
+++ b/Bakyuusubcss2.css
@@ -39,7 +39,7 @@ a:visited {color:#1e598e;text-decoration:none;outline:none;}
 ::selection{background:rgba(0, 0, 0, 0.1);color:#333;}
 /* Header */
 #header-wrap{overflow:hidden;height:240px;width:990px;margin:0 auto;}
-#header-inner{margin:85px auto;background:url(http://www.animechiby.com/wp-content/uploads/2015/01/Splash-Geo-Purple-by-Rehayel.jpg);padding:15px 0;}
+#header-inner{margin:85px auto;background:rgba(0, 188, 212, 0.3);padding:15px 0;}
 #header-wrap h1{text-transform:uppercase;margin:0;text-align:center;font-family:Oswald, sans-serif;color:rgba(255, 235, 255, 1);font-size:40px;text-shadow:2px 3px 2px #0097A7;}
 #header-wrap h1 a{color:#fff;}
 #header-wrap .description{text-transform:uppercase;text-align:center;font-family:Oswald, sans-serif;color:#FFF;font-size:16px;text-shadow:1px 1px 2px rgba(0, 0, 0, 0.2);}
